# Collapsible_Headings

./: README.md  package.json  pyproject.toml  setup.py
schema/: plugin.json
src/: index.ts
